welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: '=' expected but ';' found.
var yInt:0
^RunHalf:4: error: identifier expected but integer literal found.
var yInt:0
         ^