welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var xInt:=0 
var yInt:0
while ( 2*y<x+1) { avance()
if ( estsurorange ) { x=x+1}
if ( estSurBiscuit) { y=y+1}

}



}
